# rustpy-bench

./: .editorconfig  .gitattributes  .gitignore  .python-version  Cargo.toml  Makefile  README.md  experiment.toml  license  pyproject.toml
docs/: NTP 2025_26 - Pravila polaganja.html  proposal.md  spec.sr.md
python/core/: pyproject.toml
python/core/src/rustpy_bench/core/: config.py  ic.py  io.py  solver.py
python/multi-processing/: pyproject.toml
python/multi-processing/src/heatpy_mp/: __init__.py  solver.py
python/serial/: pyproject.toml
python/serial/src/heatpy/: __init__.py  solver.py
python/viz/: pyproject.toml
python/viz/src/heatviz/: field.py  reader.py  scaling.py
results/: report.bib  report.typ
results/2026-07-05/assets/: weak.h5tree.txt
results/assets/: env.csv  scaling_tables.txt  strong.h5  strong.h5tree.txt  weak.h5
rust/core/: Cargo.toml
rust/core/src/: config.rs  ic.rs  io.rs  lib.rs  solver.rs
rust/multi-threading/: Cargo.toml  pyproject.toml
rust/multi-threading/src/: main.rs
rust/serial/: Cargo.toml  pyproject.toml
rust/serial/src/: main.rs
scripts/: _common.py  strong_scaling.py  weak_scaling.py
