[workspace]
resolver = "2"
members = ["rust/*"]

[workspace.package]
version = "2026.4.0"
authors = ["Алекса Ћетковић <cetkovic.sv77.2022@uns.ac.rs>"]
edition = "2024"
rust-version = "1.93.0"
license-file = "license"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.7"
hdf5 = "0.8"
ndarray = "0.15"
clap = { version = "4", features = ["derive"] }
hostname = "0.4"
anyhow = "1"
rustpy-bench-core = { path = "rust/core" }
