[tool.uv.workspace]
members = [
    "python/*",
    "rust/*",
]
exclude = [
  "rust/core",
]
# cache-dir = "./.cache/uv"

[tool.uv]
managed = true
package = false
required-version = ">=0.9.27" # NOTE: To be more strict use "==0.9.27"
# below just in case I fork on parallel and serial impls
build-constraint-dependencies = ["uv_build>=0.9.27,<0.10.0","maturin>=1.0,<2.0"]
constraint-dependencies = ["numpy==2.4.2"]

[tool.uv.sources]
heatrs-mp = { workspace = true }
heatpy = { workspace = true }
heatpy-mp = { workspace = true }
heatrs = { workspace = true }
heatrs-mt = { workspace = true }
rustpy-bench-core = { workspace = true }

# uv requires a root project (let it be a virtual one). This could be the project that preforms experiments, with maturin and PyO3.
[project]
name = "rustpy-bench"
version = "2026"
requires-python = ">=0"
dependencies = []

[dependency-groups]
dev = [
    "heatpy",
    "heatpy-mp",
    "heatrs",
    "heatrs-mt",
]
