[project]
name = "heatpy"
version = "2026.4.0"
description = "Add your description here"
authors = [
    { name = "Алекса Ћетковић", email = "cetkovic.sv77.2022@uns.ac.rs" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
heatpy = "heatpy:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
