[package]
name = "rustpy-bench-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
serde.workspace = true
toml.workspace = true
hdf5.workspace = true
ndarray.workspace = true
hostname.workspace = true
anyhow.workspace = true
